Fixed horizontal scrolling issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,11 @@
-@media screen and (min-width: 320px) {
-  html h2 {
-    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
-  }
-}
-@media screen and (min-width: 1000px) {
-  html h2 {
-    font-size: 22px;
-  }
-}
-
 body {
+  overflow-y: auto;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
 .App {
-  padding: 5px;
+  margin: 5px;
 }
